<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name" translatable="false">CodeOps Studio</string>
    <string name="app_slogan">Code anywhere anytime</string>
    <string name="theme_auto">Auto</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="close_app">Close app</string>
    <string name="app_crashed">%s crashed.</string>
    <string name="dialog_config_theme_title">Choose theme</string>
    <string name="dialog_code_editor_tab_size">Tab size</string>
    <string name="sharelayout_actiontext">@string/share</string>
    <string name="sharelayout_prompttext">Generating link please wait</string>
    <string name="sharelayout_summarytext">Share this link with anyone passionate about coding, and let them experience seamless coding on the go.</string>
    <string name="sharelayout_titletext">Share this application</string>
    <string name="retry">Retry</string>
    <string name="released_on">Released on</string>
    <string name="version">Version</string>
    <string name="visit_website">Visit Website</string>
    <string name="social_media_handles">Socials</string>
    <string name="open_source_licences">Open Source Licences</string>
    <string name="check_update">Check update</string>
    <string name="documentation">Documentation</string>
    <string name="successfully_imported">Successfully imported</string>
    <string name="pkg_name">Package Name</string>
    <string name="task">Task</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="app_version">App version</string>
    <string name="app_version_code">Version code</string>
    <string name="app_version_name">Version name</string>
    <string name="installed_by">Installed by</string>
    <string name="system">System</string>
    <string name="execute">Execute</string>
    <string name="undo">Undo</string>
    <string name="relative_close_first">First</string>
    <string name="relative_close_all">All</string>
    <string name="untitled">Untitled</string>
    <string name="share">Share</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="sdk_version">SDK version</string>
    <string name="about">About</string>
    <string name="about_template">About template</string>
    <string name="settings">Settings</string>
    <string name="redo">Redo</string>
    <string name="failed">Failed</string>
    <string name="next">Next</string>
    <string name="speed">Speed</string>
    <string name="welcome">Welcome</string>
    <string name="empty_editor">Empty Editor</string>
    <string name="explorer">explorer</string>
    <string name="build_output">Build Output</string>
    <string name="ide_logs">IDE Logs</string>
    <string name="terminal">Terminal</string>
    <string name="offline">Offline</string>
    <string name="locale">Locale</string>
    <string name="format">Format</string>
    <string name="search">Search</string>
    <string name="exit">Exit</string>
    <string name="privacy">Privacy</string>
    <string name="device_model">Device Model</string>
    <string name="android_version">Android Version</string>
    <string name="build_id">Build ID</string>
    <string name="release">Release</string>
    <string name="board">Board</string>
    <string name="stacktrace">Stacktrace</string>
    <string name="brand">Brand</string>
    <string name="country">Country</string>
    <string name="cpu_arch">CPU Arch</string>
    <string name="run">Run</string>
    <string name="find">Find</string>
    <string name="save">Save</string>
    <string name="rename">Rename</string>
    <string name="pref_editor_tab_category_title">Tabs</string>
    <string name="pref_category_config_title">Configure</string>
    <string name="pref_category_privacy_title">@string/privacy</string>
    <string name="pref_category_about_title">About</string>
    <string name="pref_general_config_title">General</string>
    <string name="pref_general_config_summ">General IDE configuration</string>
    <string name="pref_editor_config_title">Editor</string>
    <string name="pref_editor_config_summ">Configure the editor</string>
    <string name="pref_privacy_title">@string/privacy</string>
    <string name="pref_privacy_summ">Statistics and metrics consent</string>
    <string name="pref_changelog_title">Release Notes</string>
    <string name="pref_changelog_summ">View all updates made to this app</string>
    <string name="pref_about_title">About CodeOps Studio</string>
    <string name="pref_about_summ">More about CodeOps Studio.</string>
    <string name="pref_share_stats_title">Share usage Statistics and Metrics</string>
    <string name="pref_share_stats_summ">Automatically send anonymous metrics and usage statistics.</string>
    <string name="pref_privacy_info_collection_title">Application</string>
    <string name="pref_editor_file_category_title">File</string>
    <string name="pref_editor_file_title_default_file_encoding">Default file encoding</string>
    <string name="pref_editor_file_summ_default_file_encoding">Sets a default file encoding to be used when saving files.</string>
    <string name="pref_editor_code_editor_category_title">Code editor</string>
    <string name="pref_editor_code_editor_title_font_size">Font size</string>
    <string name="pref_editor_code_editor_summ_font_size">Controls the font size of the editor</string>
    <string name="pref_editor_code_editor_title_font">Editor font</string>
    <string name="pref_editor_code_editor_summ_font">Choose a font for the editor.</string>
    <string name="pref_editor_code_editor_title_npc">Non-Printable painting flags</string>
    <string name="pref_editor_code_editor_summ_npc">Controls what non-printable painting flags should be drawn by the editor.</string>
    <string name="pref_editor_code_editor_title_tab_size">Tab size</string>
    <string name="pref_editor_code_editor_summ_tab_size">The number of spaces a tab is equal to.</string>
    <string name="pref_editor_code_editor_title_font_ligatures">Font ligatures</string>
    <string name="pref_editor_code_editor_summ_font_ligatures">Enable or disable font ligatures.</string>
    <string name="pref_editor_code_editor_title_word_wrap">Word wrap</string>
    <string name="pref_editor_code_editor_summ_word_wrap">Enable or disable word wrap.</string>
    <string name="pref_editor_code_editor_title_tab_indent">Use soft tabs</string>
    <string name="pref_editor_code_editor_summ_tab_indent">Controls whether TAB(\\t) should be used instead of spaces for indentation.</string>
    <string name="pref_editor_code_editor_title_icu_lib">ICU library</string>
    <string name="pref_editor_code_editor_summ_icu_lib">Use ICU library to retrieve word edges for double-tap and long-press word selection.</string>
    <string name="pref_editor_code_editor_title_pin_line_number">Pin line number</string>
    <string name="pref_editor_code_editor_summ_pin_line_number">Controls whether the line number should be visible on scroll events.</string>
    <string name="pref_editor_code_editor_title_line_height">Line Height</string>
    <string name="pref_editor_code_editor_summ_line_height">Controls the height size of the editor line.</string>
    <string name="pref_editor_code_editor_panels_category_title">Panels</string>
    <string name="pref_editor_code_editor_panels_navigation_title">Breadcrumbs Panel</string>
    <string name="pref_editor_code_editor_tabs_close_unpinned_project_panes_title">Close unpinned project panes</string>
    <string name="pref_editor_code_editor_tabs_close_unpinned_project_panes_summ">Remove all unpinned panes when closing a project.</string>
    <string name="pref_editor_code_editor_panels_navigation_summ">Hide or display the breadcrumbs panel.</string>
    <string name="pref_editor_code_editor_title_use_magnifier">Magnifier</string>
    <string name="pref_editor_code_editor_summ_use_magnifier">Magnify text while selecting text in the editor.</string>
    <string name="pref_editor_code_editor_title_sticky_scroll">Sticky scroll</string>
    <string name="pref_editor_code_editor_summ_sticky_scroll">Show the nested current scopes during the scroll at the top of the editor.</string>
    <string name="pref_editor_code_editor_title_auto_close_bracket">Auto closing brackets</string>
    <string name="pref_editor_code_editor_title_relative_close_depth">Relative Close depth</string>
    <string name="pref_editor_code_editor_summ_relative_close_depth">Choose the number of editors to close when closing to a relative position</string>
    <string name="pref_editor_code_editor_summ_auto_close_bracket">Controls whether the editor should automatically close brackets after the user adds an opening bracket.</string>
    <string name="pref_editor_code_editor_title_scrollbar">Scroll bar</string>
    <string name="pref_editor_code_editor_summ_scrollbar">Controls the visibility of the horizontal and vertical scroll bars.</string>
    <string name="pref_editor_code_editor_title_hardware_acc">HardWare acceleration</string>
    <string name="pref_editor_code_editor_summ_hardware_acc">Speed up editor rendering \n Enabling would this may result in an increase in memory usage.</string>
    <string name="pref_editor_code_editor_title_line_num">Line numbers</string>
    <string name="pref_editor_code_editor_summ_line_num">Controls the display of line number in the editor.</string>
    <string name="pref_editor_code_editor_title_del_empty_ln_bakspce">Delete empty lines on backspace</string>
    <string name="pref_editor_code_editor_summ_del_empty_ln_bakspce">Controls whether empty lines should be deleted when backspace key is pressed.</string>
    <string name="pref_editor_code_editor_title_del_tab_bakspce">Delete tab on backspace</string>
    <string name="pref_editor_code_editor_summ_del_tab_bakspce">Controls whether the editor should delete  spaces equal to tab width when backspace key is pressed.</string>
    <string name="pref_editor_code_editor_title_cursor_blnk_period">Cursor blink duration</string>
    <string name="pref_editor_code_editor_summ_cursor_blnk_period">Controls the duration at which the cursor would blink.</string>
    <string name="pref_editor_code_editor_title_animate_auto_complt_window">Animate completion window</string>
    <string name="pref_editor_code_editor_summ_animate_auto_complt_window">Controls whether the completion should be animated or not.</string>
    <string name="pref_editor_code_editor_title_highlight_brckt">Highlight brackets</string>
    <string name="pref_editor_code_editor_summ_highlight_brckt">Controls whether the brackets at cursor position should be highlighted or not.</string>
    <string name="pref_editor_code_editor_title_auto_complete">Auto-Complete</string>
    <string name="pref_editor_code_editor_summ_auto_complete">Controls whether the editor should create a panel to show suggestions at cursor position or not.</string>
    <string name="pref_general_config_interface_title">Interface</string>
    <string name="pref_general_config_list_preference_title">Theme</string>
    <string name="pref_general_config_sync_theme_with_title">Material you</string>
    <string name="pref_general_config_sync_theme_with_summ">If enabled app theme would sync with that of your device operating system.</string>
    <string name="pref_general_conifg_project_title">Project configuration</string>
    <string name="pref_general_config_lastproject_switch_pref_title">Open last project</string>
    <string name="pref_general_config_lastproject_switch_pref_summ">Reopens last project on next startup.</string>
    <string name="pref_general_config_workbench">Workbench</string>
    <string name="pref_general_config_startup_editor">Startup pane</string>
    <string name="pref_general_config_display_welcome_pane">@string/show_welcome_pane</string>
</resources>