<?xml version="1.0" encoding="utf-8"?>
<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 ~ This file is part of CodeOps Studio.
 ~ CodeOps Studio - code anywhere anytime
 ~ https://github.com/euptron/CodeOps-Studio
 ~ Copyright (C) 2024 EUP
 ~ 
 ~ This program is free software: you can redistribute it and/or modify
 ~ it under the terms of the GNU General Public License as published by
 ~ the Free Software Foundation, either version 3 of the License, or
 ~ (at your option) any later version.
 ~ 
 ~ This program is distributed in the hope that it will be useful,
 ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
 ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 ~ GNU General Public License for more details.
 ~ 
 ~ You should have received a copy of the GNU General Public License
 ~ along with this program. If not, see https://www.gnu.org/licenses/
 ~ 
 ~ If you have more questions, feel free to message EUP if you have any
 ~ questions or need additional information. Email: etido.up@gmail.com
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

   <androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/pref_general_config_interface_title">
        <ListPreference
            android:defaultValue="3"
            android:dialogTitle="@string/dialog_config_theme_title"
            android:entries="@array/theme"
            android:entryValues="@array/theme_values"
            app:iconSpaceReserved="false"
            app:key="pref_app_theme"
            app:title="@string/pref_general_config_list_preference_title"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="pref_dynamic_colours"
            app:summary="@string/pref_general_config_sync_theme_with_summ"
            app:title="@string/pref_general_config_sync_theme_with_title" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/pref_general_config_workbench">

        <SwitchPreferenceCompat
            android:defaultValue="true"
            app:iconSpaceReserved="false"
            app:key="pref_show_welcome_pane"
            app:summary="@string/pref_general_config_display_welcome_pane"
            app:title="@string/pref_general_config_startup_editor" />
    </PreferenceCategory>
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/pref_general_conifg_project_title">
        <SwitchPreferenceCompat
            android:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="pref_open_last_project"
            app:summary="@string/pref_general_config_lastproject_switch_pref_summ"
            app:title="@string/pref_general_config_lastproject_switch_pref_title" />
    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
